# learning-to-fly

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_build_firmware  README.MD
include/learning_to_fly/simulator/: multirotor.h  operations_generic.h
include/learning_to_fly/simulator/parameters/: default.h
include/learning_to_fly/simulator/parameters/dynamics/: crazy_flie.h
include/learning_to_fly/simulator/parameters/init/: default.h
include/learning_to_fly/simulator/parameters/reward_functions/: abs_exp.h  default.h  sq_exp.h
include/learning_to_fly/simulator/parameters/termination/: default.h
include/learning_to_fly_in_seconds/simulator/: metrics.h  multirotor.h  operations_cpu.h  operations_cuda.h  operations_generic.h  quaternion_helper.h  ui.h
include/learning_to_fly_in_seconds/simulator/parameters/: default.h
include/learning_to_fly_in_seconds/simulator/parameters/dynamics/: crazy_flie.h  mrs.h
include/learning_to_fly_in_seconds/simulator/parameters/init/: default.h
include/learning_to_fly_in_seconds/simulator/parameters/reward_functions/: abs_exp.h  absolute.h  classic.h  default.h  reward_functions.h  sq_exp.h  squared.h
include/learning_to_fly_in_seconds/simulator/parameters/termination/: default.h
scripts/: trigger.py
src/: CMakeLists.txt  ablation_study.cpp  config.h  evaluate_actor.cpp  helpers.h  parameters.h  parameters_dynamics.h  parameters_training.h  training.cpp  training.h  training_state.h
src/config/: ablation.h  actor_and_critic.h  config.h  validation.h
src/cuda/: CMakeLists.txt  README.md  benchmark.cu  parameters.h
src/steps/: checkpoint.h  critic_reset.h  curriculum.h  log_reward.h  logger.h  trajectory_collection.h  validation.h
src/ui/: get_dependencies.sh  ui.cpp
src/ui/static/: coordinate_system.js  drone.js  index.css  index.html  index_test.html  main.js  math.js  simulator.js
test/: CMakeLists.txt  general_helper.h  multirotor.cpp  multirotor_dynamics_cuda.h  multirotor_dynamics_generic.h  parameters.h  quaternion_helper.h  ui.cpp
test/regression_test_example_old/: CMakeLists.txt  comparison.cpp  parameters_new.h  parameters_old.h
